# streamx

./: -  .gitignore  ANALYSIS_ROOT_CAUSES.md  BUILD.md  CMakeLists.txt  DELIVERY_SUMMARY.md  GUI.md  GUI_IMPLEMENTATION_COMPLETE.md  GUI_IMPLEMENTATION_REFERENCE.md  IMPLEMENTATION_COMPLETE.md  INDEX.md  Makefile  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  START_HERE.md  streamx_config.example.json
docs/: API.md  BUILD.md  EXAMPLES.md  README.md
include/streamx/: plan_c.h  plan_d.h  plan_d_bridge.h  streaming_controller.h
include/streamx/core/: buffer.h  capture.h  encoder.h  frame.h  types.h
include/streamx/gui/: main_window.h  monitoring_widget.h  platforms_widget.h  settings_widget.h  stream_control_widget.h
include/streamx/platform/: platform_implementations.h  rtmp_handler.h  streaming_platform.h
include/streamx/portal/: dbus_screencast.h
include/streamx/utils/: config.h  logger.h  thread_pool.h
scripts/plan_c/: plan_c1_stream.sh  plan_c2_stream.sh
src/: main.cpp  streaming_controller.cpp
src/core/: buffer.cpp  capture.cpp  encoder.cpp  frame.cpp
src/gui/: main_gui.cpp  main_window.cpp  monitoring_widget.cpp  platforms_widget.cpp  resources.qrc  settings_widget.cpp  stream_control_widget.cpp
src/gui/styles/: dark.qss
src/plan_c/: plan_c.cpp  plan_c.h
src/plan_d/: plan_d.cpp
src/plan_d_bridge/: plan_d_bridge.cpp
src/platform/: rtmp_handler.cpp  streaming_platform.cpp
src/portal/: dbus_screencast.cpp  dbus_screencast.h
src/utils/: config.cpp  logger.cpp  thread_pool.cpp
tests/: CMakeLists.txt  test_buffer.cpp  test_encoder.cpp  test_frame.cpp  test_platforms.cpp
